--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 Tailwind/01-Harry-Potter-site/node_modules
 Tailwind/02-Design-Daily-subscribe/node_modules
 Tailwind/03-Design-Daily-pricing-cards/node_modules
+React/03-react-typescript-Vite-Tailwind/node_modules
 React/01-react-app/node_modules
+Tailwind\01-Harry-Potter-site\node_modules
+Tailwind\02-Design-Daily-subscribe\node_modules
+Tailwind\03-Design-Daily-pricing-cards\node_modules
+js/node_modules
